# ot-harjoitusty-

./: .gitignore  README.md
documentation/: requirement_specification.md  tuntikirjanpito.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/: kassapaate.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: kaavio.md  sekvenssikaavio.md
recipe-app/: .coverage  pyproject.toml  tasks.py
recipe-app/data/: database.sqlite  test-database.sqlite
recipe-app/documentation/: architecture.md  changelog.md  manual.md  requirement_specification.md  testing.md  tuntikirjanpito.md
recipe-app/src/: database_connection.py  index.py  initialize_database.py  tkinter_test.py  user.py
recipe-app/src/entities/: recipe.py  user.py
recipe-app/src/repositories/: recipe_repository.py  user_repository.py
recipe-app/src/services/: recipe_app_service.py  recipe_service.py
recipe-app/src/tests/repositories/: recipe_repository_test.py  user_repository_test.py
recipe-app/src/tests/services/: recipe_app_service_test.py
recipe-app/src/ui/: add_recipe_page.py  edit_recipe_page.py  find_recipes_page.py  home_page.py  login_page  login_page.py  my_recipes_page.py  recipe_details_page.py  register_page.py  search_results_page.py  ui.py
