[tool.poetry]
name = "recipe-app"
version = "0.1.0"
description = ""
authors = ["Germuu <jeremyyamajako@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^6.1"
invoke = "^2.2.0"
python-dotenv = "^1.0.1"
ttkthemes = "^3.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
coverage = "^7.4.4"
pylint = "^3.1.0"
autopep8 = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
